# cryptography-labs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  xmake.lua
docs/: .gitignore  Makefile  lab.mk
docs/lab1/: lab1.md  密码学基础-1-AES-结果截图.docx
docs/lab2/: lab2.md
docs/lab3/: lab3.md
docs/lab4/: lab4.md  lab4_src.md
docs/tex/: Makefile  hcr-cumcm.sty  main.tex  markdown-languages.json
src/include/: debug.h
src/lab1/: aes.h  lab1-aes.c
src/lab1/aes-rs/: Cargo.toml  xmake.lua
src/lab1/aes-rs/src/: aes_rs.rs  main.rs
src/lab1/aes-rs/tests/: ndarray-test.rs
src/lab1/tests/: function-test.c  lang-test.c  round-test.c  stream-decode.c  stream-encode.c
src/lab2/: .gitignore  Cargo.toml
src/lab2/src/: lib.rs  main.rs  rsa.rs
src/lab2/src/lib/: prime_gen.rs
src/lab2/src/lib/keys/: key_data.rs  key_pair.rs  key_reader.rs  key_writer.rs
src/lab2/src/rsa/: config.rs  keys.rs  lib.rs  mod.rs  prime_gen.rs
src/lab2/src/rsa/keys/: key_data.rs  key_pair.rs  key_reader.rs  key_writer.rs  mod.rs
src/lab2/src/rsa/lib/: prime_gen.rs
src/lab2/src/rsa/lib/keys/: key_data.rs  key_pair.rs  key_reader.rs  key_writer.rs  mod.rs
src/lab3/: .gitignore  lab3.sh  totext.py  urldecode.py
src/lab4/: .gitignore  Cargo.toml  Makefile  xmake.lua
src/lab4/data/: lab4-message-fake.txt  lab4-message.txt
src/lab4/scripts/: lab4.sh
src/lab4/src/: lib.rs  main.rs
src/lab4/src/elgamal/: config.rs  key_reader.rs  keys.rs  mod.rs  sign.rs
