[package]
name = "lab4"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chiro2001/cryptography-labs"
description = "Simple ElGamal lab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { path = "../lab2" }
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"