[package]
name = "aes-rs"
version = "0.1.0"
edition = "2021"
authors = ["chiro <Chiro2001@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
futures = "0.3"
log = "0.4"
simplelog = "0.12.0"
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"
