[package]
name = "aes-rs"
version = "0.1.0"
edition = "2021"
authors = ["chiro <Chiro2001@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"
